# SeqSimFit

./: LICENSE  README.md
seqsimfit_release/: ANALYSIS_DESIGN.md  CODE_REVIEW.md  README.md  VALIDATION.md  analysis.py  fitness.py  model.py  pyproject.toml  scorers.py  simulator.py  utils.py
seqsimfit_release/examples/: usage.py
seqsimfit_release/seqsimfit/: __init__.py  analysis.py  fitness.py  model.py  scorers.py  simulator.py  utils.py
seqsimfit_release/tests/: test_analysis.py  test_core.py
simulator/: fitness.py  model.py  simulator.py  utils.py
