[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seqsimfit"
version = "1.1.0"
description = "Unified fitness-constrained protein sequence simulator"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
test = ["pytest>=7"]
dca = ["biopython>=1.80", "h5py>=3.8"]
ml = ["torch>=2"]
mpnn = ["scipy>=1.10", "torch>=2"]
analysis = ["matplotlib>=3.7", "scipy>=1.10"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["simulator", "scorers", "fitness", "utils", "model", "analysis"]

[tool.setuptools.packages.find]
where = ["."]
include = ["seqsimfit*"]
